--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "html-webpack-plugin": "^2.30.1",
     "react": "^16.0.0-beta.5",
     "react-dom": "^16.0.0-beta.5",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
     "style-loader": "^0.18.2",
     "webpack": "^3.5.5",
     "webpack-dev-server": "^2.8.1"
