--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "^4.5.0",
     "eslint-plugin-react": "^7.3.0",
     "html-webpack-plugin": "^2.30.1",
+    "lodash": "^4.17.4",
     "react": "^16.0.0-beta.5",
     "react-dom": "^16.0.0-beta.5",
     "react-redux": "^5.0.6",
