--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,7 @@
     "browser": true,
     "node": true,
   },
+  "parser": "babel-eslint",
   "parserOptions": {
     "ecmaVersion": 6,
     "sourceType": "module",
@@ -18,6 +19,7 @@
     "no-unused-vars": 1,
     "comma-dangle": [1, "always-multiline"],
     "import/no-unresolved": 0,
+    "react/prop-types": 1,
     "react/react-in-jsx-scope": 2,
     "react/jsx-uses-react": 2,
     "react/jsx-uses-vars": 2,
