--- a/package.json
+++ b/package.json
@@ -28,5 +28,9 @@
     "style-loader": "^0.18.2",
     "webpack": "^3.5.5",
     "webpack-dev-server": "^2.8.1"
+  },
+  "devDependencies": {
+    "babel-eslint": "^8.0.1",
+    "prop-types": "^15.6.0"
   }
 }
