--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --watch --open",
+    "start": "webpack-dev-server --watch",
     "lint": "eslint --ext .js,.jsx src"
   },
   "author": "",
