--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lodash": "^4.17.4",
     "react": "^16.0.0-beta.5",
     "react-dom": "^16.0.0-beta.5",
+    "react-masonry-component": "^6.0.2",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "style-loader": "^0.18.2",
