--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "style-loader": "^0.18.2",
+    "styled-components": "^3.4.9",
     "webpack": "^3.5.5",
     "webpack-dev-server": "^2.8.1"
   },
