--- a/.eslintrc
+++ b/.eslintrc
@@ -1,32 +1,3 @@
 {
-  "env": {
-    "es6": true,
-    "browser": true,
-    "node": true,
-  },
-  "parser": "babel-eslint",
-  "parserOptions": {
-    "ecmaVersion": 6,
-    "sourceType": "module",
-    "ecmaFeatures": {
-      "jsx": true,
-      "experimentalObjectRestSpread": true
-    },
-  },
-  "rules": {
-    "semi": 2,
-    "no-undef": 2,
-    "no-unused-vars": 1,
-    "comma-dangle": [1, "always-multiline"],
-    "import/no-unresolved": 0,
-    "react/prop-types": 1,
-    "react/no-unused-prop-types": 1,
-    "react/react-in-jsx-scope": 2,
-    "react/jsx-uses-react": 2,
-    "react/jsx-uses-vars": 2,
-    "react/jsx-no-undef": 2
-  },
-  "plugins": [
-    "react"
-  ]
+  "extends": "react-app"
 }
