--- a/package.json
+++ b/package.json
@@ -3,36 +3,21 @@
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
+  "private": true,
   "scripts": {
-    "start": "webpack-dev-server --watch",
-    "lint": "eslint --ext .js,.jsx src"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "classnames": "^2.2.5",
-    "css-loader": "^0.28.7",
-    "eslint": "^4.5.0",
-    "eslint-plugin-react": "^7.3.0",
-    "html-webpack-plugin": "^2.30.1",
-    "lodash": "^4.17.4",
-    "react": "^16.0.0-beta.5",
-    "react-dom": "^16.0.0-beta.5",
-    "react-masonry-component": "^6.0.2",
     "react-redux": "^5.0.6",
-    "redux": "^3.7.2",
-    "style-loader": "^0.18.2",
+    "redux": "^4.0.0",
     "styled-components": "^3.4.9",
-    "webpack": "^3.5.5",
-    "webpack-dev-server": "^2.8.1"
-  },
-  "devDependencies": {
-    "babel-eslint": "^8.0.1",
-    "prop-types": "^15.6.0"
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "react-scripts": "1.1.5"
   }
 }
